@@ -1,0 +1,28 @@
+# --
+# AgentTicketEscalation.dtl - provides HTML form for bounce mask
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
+# --
+# $Id: AgentTicketEscalation.dtl,v 1.1 2008-12-22 00:10:59 martin Exp $
+# --
+# This software comes with ABSOLUTELY NO WARRANTY. For details, see
+# the enclosed file COPYING for license information (GPL). If you
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
+# --
+<!-- dtl:block:TicketEscalationFirstResponseTimeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: first response time is over (%s)!", "$QData{"TicketNumber"}", "$QData{"FirstResponseTimeHuman"} / $TimeShort{"$QData{"FirstResponseTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationFirstResponseTimeOver -->
+<!-- dtl:block:TicketEscalationFirstResponseTimeWillBeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: first response time will be over in %s!", "$QData{"TicketNumber"}", "$QData{"FirstResponseTimeHuman"} / $TimeShort{"$QData{"FirstResponseTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationFirstResponseTimeWillBeOver -->
+<!-- dtl:block:TicketEscalationUpdateTimeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: update time is over (%s)!", "$QData{"TicketNumber"}", "$QData{"UpdateTimeHuman"} / $TimeShort{"$QData{"UpdateTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationUpdateTimeOver -->
+<!-- dtl:block:TicketEscalationUpdateTimeWillBeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: update time will be over in %s!", "$QData{"TicketNumber"}", "$QData{"UpdateTimeHuman"} / $TimeShort{"$QData{"UpdateTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationUpdateTimeWillBeOver -->
+<!-- dtl:block:TicketEscalationSolutionTimeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: solution time is over (%s)!", "$QData{"TicketNumber"}", "$QData{"SolutionTimeHuman"} / $TimeShort{"$QData{"SolutionTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationSolutionTimeOver -->
+<!-- dtl:block:TicketEscalationSolutionTimeWillBeOver -->
+<a href="$Env{"Baselink"}Action=AgentTicketZoom&TicketID=$LQData{"TicketID"}" title="$QData{"Title"}">$Text{"Ticket %s: solution time will be over in %s!", "$QData{"TicketNumber"}", "$QData{"SolutionTimeHuman"} / $TimeShort{"$QData{"SolutionTimeDestinationDate"}"}"}</a>
+<!-- dtl:block:TicketEscalationSolutionTimeWillBeOver -->
